--- a/ToDo Application/app/templates/login.html
+++ b/ToDo Application/app/templates/login.html
@@ -1,19 +1,48 @@
-<form action="{{ url_for('login') }}" method="post">
-	{% if message is defined and message %}
-		<div class="alert alert-warning">{{ message }}</div>
-	{% endif %}
-	<div class="form-group">
-		<label for="username">Username:</label>
-		<input type="username" class="form-control" id="username" name="username" placeholder="Enter username">
-	</div>
-	<div class="form-group">
-		<label for="password">Password:</label>
-		<input type="password" class="form-control" id="password" name="password" placeholder="Enter password">
-	</div>    
-	<button type="submit" class="btn btn-primary">Login</button>
-</form>
+<!DOCTYPE html>
+<html>
+  <head>
+    <title>ToDo App</title>
+    <link
+      rel="stylesheet"
+      type="text/css"
+      href="{{ url_for('static', filename='login.css') }}"
+    />
+  </head>
+  <body>    
+    <div class="container">
+      <div class="header">
+        <h1>ToDo App</h1>
+      </div>
+      <form action="{{ url_for('login') }}" method="post">
+        {% if message is defined and message %}
+        <div class="alert alert-warning">{{ message }}</div>
+        {% endif %}
+        <div class="form-group">
+          <label for="username">Username:</label>
+          <input
+            type="username"
+            class="form-control"
+            id="username"
+            name="username"
+            placeholder="Enter username"
+          />
+        </div>
+        <div class="form-group">
+          <label for="password">Password:</label>
+          <input
+            type="password"
+            class="form-control"
+            id="password"
+            name="password"
+            placeholder="Enter password"
+          />
+        </div>
+        <button type="submit" class="btn btn-primary">Login</button>
+      </form>
 
-<form action="{{ url_for('register') }}" method="get">
-<button class="btn btn-primary">Register</button>
-</form>
-
+      <form action="{{ url_for('register') }}" method="get">
+        <button type="submit" class="btn btn-primary">Register</button>
+      </form>
+    </div>
+  </body>
+</html>
